Fixed formatting in fetch.ts and finished working local upload/retrieval flow

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,18 @@ out/
 # Build outputs
 dist/
 build/
+
+# Test files
+backend/filename-test.txt
+backend/ngrok-test.txt
+backend/stable-link-test.txt
+backend/test-upload.txt
+
+# Database files
+backend/fileInfo.db
+
+# Build artifacts
+frontend/tsconfig.tsbuildinfo
+
+# Certificates
+backend/cert.bin
