--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "form-data": "^4.0.4",
     "fs": "^0.0.1-security",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "sqlite": "^5.1.1",
