--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,11 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "ethers": "^6.8.0",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
-    "viem": "^1.18.0",
-    "wagmi": "^1.4.5"
+    "@reown/appkit": "^1.0.0",
+    "@reown/appkit-adapter-wagmi": "^1.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
