feat: align payments with EigenDA blob buckets

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,13 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001
 
+# Reown AppKit Project ID (required for wallet connection)
+# Get yours at: https://dashboard.reown.com
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=YOUR_PROJECT_ID_HERE
+
+# Optional: Custom RPC endpoints to avoid public rate limits
+# NEXT_PUBLIC_SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/YOUR_KEY
+# NEXT_PUBLIC_MAINNET_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
+
 # Testing Mode: Set to 'true' to bypass wallet connection and payment requirements
 # WARNING: Only use for testing! Set to 'false' or remove for production
 # NEXT_PUBLIC_SKIP_PAYMENT_CHECKS=true
