--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "protobufjs": "^7.5.4",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^13.0.0"
