--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc && cp src/utils/eigenda_protos.json dist/utils/eigenda_protos.json",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -36,7 +36,6 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "protobufjs-cli": "^1.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
