--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,7 +1,7 @@
 providers = ["go", "node"]
 
 [phases.setup]
-nixPkgs = ["go", "nodejs"]
+nixPkgs = ["go"]
 
 [phases.build]
 cmds = ["cd blobkeyhelper && go mod download && go build -o ../bin/blobkeyhelper ./cmd/blobkeyhelper && cd .. && npm ci && npm run build"]
