fix: force local go toolchain to prevent download errors

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -3,5 +3,8 @@ providers = ["go", "node"]
 [phases.setup]
 nixPkgs = ["go"]
 
+[variables]
+GOTOOLCHAIN = "local"
+
 [phases.build]
 cmds = ["cd blobkeyhelper && go mod download && go build -o ../bin/blobkeyhelper ./cmd/blobkeyhelper && cd .. && npm ci && npm run build"]
